🧹 restructure, improve style and fix typos

--- a/AZ-400 Microsoft Azure DevOps Solutions/10. Containers.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/10. Containers.md
@@ -69,7 +69,7 @@
     ENTRYPOINT ["dotnet", "serverappname.dll"]
 ```
 
-- A ***multi-stage** data file consisting of two stages.
+- A **multi-stage** data file consisting of two stages.
     1. Build application
     2. Run the application
   - Read more at [docker.com](https://docs.docker.com/develop/develop-images/multistage-build/)
@@ -100,15 +100,15 @@
 - Assists with the developing and managing cloud native applications.
 - Intended for container-based applications running on enterprise-class, cloud-scale environments.
 - To be able to [deploy using Azure Pipelines](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-deploy-app-with-cicd-vsts):
-  - Add new ***Service Fabric Connection***
+  - Add new **Service Fabric Connection**
     - Requires a cluster endpoint
     - Authentication options:
-      - ***Azure Active Directory***
-        - Add ***Server certificate thumbprint***  of the server cert. used to create the cluster.
-        - Also the cluster credentials in ***Username*** and ***Pasword*** fields.
-      - ***Certificate Based***
+      - **Azure Active Directory**
+        - Add **Server certificate thumbprint**  of the server cert. used to create the cluster.
+        - Also the cluster credentials in **Username** and **Pasword** fields.
+      - **Certificate Based**
         - Requires:
-          - ***Server certificate thumbprint*** of the server cert. used to create the cluster.
-          - ***Client certificate***
+          - **Server certificate thumbprint** of the server cert. used to create the cluster.
+          - **Client certificate**
             - or cluster/server certificate
-          - ***Password*** for the certificate
+          - **Password** for the certificate
