--- a/AZ-400 Microsoft Azure DevOps Solutions/10.2. Azure Kubernetes Service.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/10.2. Azure Kubernetes Service.md
@@ -157,7 +157,7 @@
 ## Access and identity options
 
 - Accounts in Kubernetes
-  - ***Service account***: one of the primary user types in Kubernetes.
+  - **Service account**: one of the primary user types in Kubernetes.
     - credentials for service accounts are stored as Kubernetes secrets
     - allows to be authorized by pods to communicate with API Server
   - **Normal user accounts**: human administrators/developers.
