--- a/AZ-400 Microsoft Azure DevOps Solutions/13. Configuration as Code (PowerShell DSC & Azure Automation & Custom Script).md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/13. Configuration as Code (PowerShell DSC & Azure Automation & Custom Script).md
@@ -48,7 +48,7 @@
 
 ### Implement Desired State Configuration
 
-- [official walkthrough](https://docs.microsoft.com/en-us/azure/automation/tutorial-configure-servers-desired-state)
+- [Official walkthrough](https://docs.microsoft.com/en-us/azure/automation/tutorial-configure-servers-desired-state)
 - ![Implementing DSC step by step](./img/implement-dsc.png)
 - Steps:
   1. Create an automation account (`New-AzureRmAutomationAccount`)
