--- a/AZ-400 Microsoft Azure DevOps Solutions/2. Azure DevOps Overview.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/2. Azure DevOps Overview.md
@@ -63,7 +63,7 @@
     - Management:
       - Automated: [group-based licensing](https://docs.microsoft.com/bs-latn-ba/azure/devops/organizations/accounts/assign-access-levels-and-extensions-by-group-membership?view=azure-devops&viewFallbackFrom=vsts&tabs=preview-page) using AD groups, just add & remove people from the group.
       - Manually: [Assign & remove users](https://docs.microsoft.com/en-us/azure/devops/organizations/billing/buy-basic-access-add-users?view=azure-devops) and assign access level (basic etc.)
-- [Check on azure prices](https://azure.microsoft.com/en-ca/pricing/details/devops/azure-devops-services/):
+- [Check on azure prices](https://azure.microsoft.com/en-ca/pricing/details/devops/azure-devops-services/)
 
 ## Service hooks
 
