--- a/AZ-400 Microsoft Azure DevOps Solutions/3. Agile work management.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/3. Agile work management.md
@@ -37,9 +37,7 @@
     - Sprint results in working functionality
 6. Retrospective & review meetings
 
-## Reporting
-
-## Project metrics
+## Reporting (Project metrics)
 
 - Important to avoid frustrations such as late deliveries
 - Understand how your work items are progressing in terms of development, testing, release
