--- a/AZ-400 Microsoft Azure DevOps Solutions/7.2.3. Azure Pipelines - DevTest Labs.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/7.2.3. Azure Pipelines - DevTest Labs.md
@@ -10,8 +10,6 @@
 
 ## Use DevTest Labs in Azure Pipelines
 
-[Microsoft documentation](https://docs.microsoft.com/en-us/azure/lab-services/use-devtest-labs-build-release-pipelines)
-
 - Two use-cases with Azure Pipelines:
   - Cheap way to create continuous test environments
     - E.g. for development and test environments
@@ -24,3 +22,4 @@
     - 💡 You can instead use an ARM template to deploy the environment instead of this task.
   - Deploy ARM template to existing Azure DevTest Labs Environment
     - You can provision both Azure PaaS resources & IaaS VMs
+- Read more: [Microsoft documentation](https://docs.microsoft.com/en-us/azure/lab-services/use-devtest-labs-build-release-pipelines)
