--- a/AZ-400 Microsoft Azure DevOps Solutions/9. Source code version control.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/9. Source code version control.md
@@ -12,14 +12,17 @@
   - They make changes
   - Push their changes into central repository
   - Other developers pull changes into their repositories
+
+### Conflicts
+
 - If developer makes changes to same line of code it results in conflict.
-  - Other developers must resolve the conflict.
-  - Other solution: **Locking**
-    - Single developer locks a part of the code.
-    - Other developers cannot work on the locked part of the code.
-    - Git does not provide any locking functionality, since it is decentralized
-      - [`git lfs`](https://github.com/git-lfs/git-lfs/) that's supported by some git providers like GitHub supports [File Locking](https://github.com/git-lfs/git-lfs/wiki/File-Locking)
-    - Centralized solutions such as SVN & ClearCase supports it.
+- Other developers must resolve the conflict.
+- Other solution: **Locking**
+  - Single developer locks a part of the code.
+  - Other developers cannot work on the locked part of the code.
+  - Git does not provide any locking functionality, since it is decentralized
+    - [`git lfs`](https://github.com/git-lfs/git-lfs/) that's supported by some git providers like GitHub supports [File Locking](https://github.com/git-lfs/git-lfs/wiki/File-Locking)
+  - Centralized solutions such as SVN & ClearCase supports it.
 
 ## Centralized vs Decentralized repositories
 
