--- a/AZ-900 Microsoft Azure Fundamentals/2.3. Azure Data Centers.md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.3. Azure Data Centers.md
@@ -23,9 +23,9 @@
 
 - For compliance or legal purposes.
 - **Azure Government**
-  - *US DoD Central*, *US Gov Virginia*, *US Gov Iowa* and more
+  - ***US DoD Central***, ***US Gov Virginia***, ***US Gov Iowa*** and more
   - 📝 Physical and logical network-isolated instances of Azure for US government agencies and partners.
-- *China East*, *China North* and more
+- ***China East***, ***China North*** and more
   - Unique partnership between Microsoft and 21Vianet
   - Microsoft does not directly maintain the datacenters.
 
