add better description security graph

--- a/AZ-900 Microsoft Azure Fundamentals/4.8. Azure Advanced Threat Protection (ATP).md
+++ b/AZ-900 Microsoft Azure Fundamentals/4.8. Azure Advanced Threat Protection (ATP).md
@@ -2,6 +2,7 @@
 
 - Cloud-based security solution that identifies, detects, helps you investigate threats.
 - Capable of detecting known malicious attacks and techniques, security issues such as compromised identities, and risks/threats against your network.
+- Can be integrated with on-premises Microsoft Defender ATP
 
 ## Azure ATP components
 
@@ -22,5 +23,10 @@
 
 - Runs on Azure infrastructure
 - Deployed in the United States, Europe, and Asia.
-- Connected to [Microsoft Intelligent Security Graph](https://www.microsoft.com/security/blog/microsoft-intelligent-security-graph/)
+- Connected to [**Microsoft Intelligent Security Graph**](https://www.microsoft.com/security/blog/2019/05/14/executing-vision-microsoft-threat-protection/)
+  - Threats signals are seamlessly shared across all the services in Microsoft Threat Protection, 6.5 trillion signals daily.
+    - **Microsoft Threat Protection**
+      - Consists of different Azure security services
+      - E.g. Office ATP, Microsoft Defender ATP, SmartScreen, Exchange Online Protection (EOP)
+  - Provides comprehensive security across multiple attack vectors.
   - Allows you to use [Microsoft Graph Security API](https://docs.microsoft.com/en-us/graph/security-concept-overview) to connect Microsoft security products, services, and partners to streamline security operations and improve threat protection, detection, and response capabilities.
