--- a/AZ-900 Microsoft Azure Fundamentals/2.6. Azure Resource Manager (Resources & Resource Groups & Management Groups).md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.6. Azure Resource Manager (Resources & Resource Groups & Management Groups).md
@@ -27,7 +27,7 @@
   - You can set-up alerts based on tags e.g. if a resource fails notification goes to the finance department.
 - 💡 Help with automation
   - E.g. `shutdown:6PM` and `startup:7AM` tag TO automate the shutdown and startup of virtual machines in development environments during off-hours to save costs.
-- 💡 Help with automation governence through [Policies](./5.1.%20Azure%20Policy%20&%20Azure%20Blueprints.md)
+- 💡 Help with automation Governance through [Policies](./5.1.%20Azure%20Policy%20&%20Azure%20Blueprints.md)
   - E.g. ensure that all resources have the Department tag associated with them and block creation if it doesn't exist.
 - ❗ Limitations:
   - A resource can have up to 50 tags.
