better organization of Azure storage services

--- a/AZ-900 Microsoft Azure Fundamentals/3.2. Storage.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.2. Storage.md
@@ -69,8 +69,11 @@
   - [Transparent multi-master replication](https://docs.microsoft.com/en-us/azure/cosmos-db/global-dist-under-the-hood), [99.999% high availability](https://docs.microsoft.com/en-us/azure/cosmos-db/high-availability) for both reads and writes
 - 💡 Good for data used by & maintained by users around the globe.
 
-### Azure Blob storage
+### Azure Storage
 
+#### Azure Blob Storage
+
+- Also known as **Azure blobs**
 - Unstructured, meaning that there are no restrictions on the kinds of data it can hold.
 - Can manage thousands of simultaneous uploads, massive amounts of video data, constantly growing log files, and can be reached from anywhere with an internet connection.
 - Lets you
@@ -79,14 +82,15 @@
 - 💡 Also used to store data for backup, disaster recovery, and archiving.
 - 📝 Ability to store up to 8 TB of data for virtual machines (VM disks)
 
-#### Storage tiers
+##### Storage tiers
 
 1. **Hot storage tier**: optimized for storing data that is accessed frequently.
 2. **Cool storage tier**: optimized for data that are infrequently accessed and stored for at least 30 days.
 3. **Archive storage tier**: for data that are rarely accessed and stored for at least 180 days with flexible latency requirements.
 
-#### Disk Storage
+#### Azure Disk Storage
 
+- Also known as **Azure disks**
 - Provides disks for virtual machines, applications, and other services to access and use as they need.
 - In the background they are page-blobs in a [blob storage](#azure-blob-storage)
 - Allows data to be persistently stored and accessed from an attached virtual hard disk.
@@ -100,22 +104,23 @@
   - Premium SSD disks for mission-critical production applications.
 - Durable: ZERO% annualized failure rate.
 
-### Azure Data Lake Storage
+#### Azure Data Lake Storage
 
 - 📝 Allows you to perform analytics on your data usage and prepare reports.
 - Stores both structured and unstructured data.
 - Combines the scalability and cost benefits of object storage with the reliability and performance of the Big Data file system capabilities.
 - Supports batch queries, interactive queries, real-time analytics, machine learning, and being a data warehouse.
 
-### Azure Files
+#### Azure File Storage
 
+- Also known as **Azure files**
 - Fully managed file shares in the cloud that are accessible via the industry standard Server Message Block (SMB) protocol.
 - Ensures the data is encrypted at rest and in transit.
 - Can be mounted concurrently by cloud or on-premises Windows, Linux, and macOS.
 - 📝 Any number of Azure virtual machines or roles can mount and access the file storage share simultaneously.
 - 💡 Good to share files anywhere in the world, diagnostic data, or application data sharing.
 
-### Azure Queue
+#### Azure Queue Storage
 
 - Service for storing large numbers of messages that can be accessed from anywhere in the world.
 - 💡 Helps build flexible applications and separate functions for better durability across large workloads
@@ -129,29 +134,29 @@
   - Distribute load among different web servers/infrastructure and to manage bursts of traffic.
   - Build resilience against component failure when multiple users access your data at the same time.
 
-## Encryption Types
+#### Encryption Types
 
-### Azure Storage Service Encryption (SSE)
+##### Azure Storage Service Encryption (SSE)
 
 - For data at rest helps you secure your data.
 - It encrypts the data before storing it and decrypts the data before returning it.
 - Encryption & decryption are transparent to the user.
 
-### Client-side encryption
+##### Client-side encryption
 
 - Data is already encrypted by the client libraries.
 - Azure stores the data in the encrypted state at rest, which is then decrypted during retrieval.
 
-## Replication
+#### Replication
 
 - Set up when you create a storage account
 - Ensures that your data is durable and always available
 - Provides regional and geographic replications
   - Protects data against natural disasters and other local disasters like fire or flooding.
 
-## On-premises storage vs Azure data storage
+#### On-premises storage vs Azure data storage
 
-### Why migrate to cloud
+##### Why migrate to cloud
 
 - **Cost effectiveness**: Pay-as-you go
   - No dedicated hardware to be purchased, installed, configured and maintained. = no up-front expense (or capital cost).
@@ -165,7 +170,7 @@
   - Requirements and technologies change: No need to reprovisioning & deployment of new infrastructure.
   - Create new services in minutes = change storage back-ends quickly without needing a significant hardware investment.
 
-### Comparison
+##### Comparison
 
 | Needs | On-premises | Azure data storage |
 | ----- | ----------- | ------------------ |
