Update 2.1. Purchasing & Licensing Options.md
line  7 Microsoft hrough a Microsoft representative > Microsoft through a Microsoft representative

--- a/AZ-900 Microsoft Azure Fundamentals/2.1. Purchasing & Licensing Options.md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.1. Purchasing & Licensing Options.md
@@ -4,7 +4,7 @@
 
 1. From Microsoft by signing up through Azure website [Azure.com](https://azure.com)
    - 📝 Monthly billing
-2. From Microsoft hrough a Microsoft representative
+2. From Microsoft through a Microsoft representative
    - 📝 Monthly billing
 3. From a Microsoft partner
    - CSP = **Cloud Solution Provider**
