describe always on and app service plan deeper

--- a/AZ-300 Microsoft Azure Architect Technologies/3.2. Web Apps (App Service).md
+++ b/AZ-300 Microsoft Azure Architect Technologies/3.2. Web Apps (App Service).md
@@ -1,16 +1,20 @@
 # Web Apps
 
 - PaaS for web applications.
-- App Service Plan is the infrastructure app services run on.
-  - Defines compute resources.
-  - Can be a dedicated VM or shared.
-  - ❗ You cannot move it to a different region, but you can clone apps.
 - Multiple languages and frameworks are supported
   - E.g. ASP. NET, Node.js, Java, PHP and Python
   - Can run any scripts/executables on VMs.
 - You can clone app across regions on premium.
 - You can create from application templates (e.g. WordPress, Joomla, Drupal).
 - Load balancing, auto scaling
+
+## App Service Plan
+
+- The infrastructure app services run on.
+- Defines compute resources.
+- Can be a dedicated VM or shared.
+- ❗ You cannot move it to a different region, but you can clone apps.
+- Multiple web apps can run on same app service plan
 
 ## DevOps
 
@@ -47,10 +51,21 @@
 
 ## Application Settings
 
-- 📝 Always on => If VM goes down etc, Azure will try to turn VM on every 10-15 ms.
-  - If you get little requests, VM is brought up when it's needed
-- ARR affinity => You don't care for states, turn it off, it'll scale better.
-- ❗ 64-bit: costs more memory, use it carefully
+- ARR affinity
+  - 💡 Turn it off you don't care for states so it scales better.
+- 64-bit
+  - ❗ Costs more memory, use it carefully
+
+### Always On
+
+- 📝 Keeps the app loaded even when there's no traffic
+- E.g.
+  - When it's on: If VM goes down Azure will try to turn VM on every 10-15 ms.
+  - When it's off: VM is brought up when it's needed
+- It has no impact on price as you're paying for the entire VM anyways.
+- 💡 Keep it
+  - On: if you want site to be up even when there's no traffic
+  - Off: If site does not get much traffic (less than every 20 minutes) as it would then free up resources for other sites to use
 
 ## Backup
 
@@ -114,7 +129,7 @@
 #### Authentication & Authorization
 
 - No code authentication
-  - App Service can validate user assertations.
+  - App Service can validate user assertions.
   - Uses JWT tokens
     - ADD => authorization header as bearer token
     - Mobile App Client SDKs
