rework services with better categorization and duplication removal

--- a/AZ-900 Microsoft Azure Fundamentals/2.5. Service-level Agreements (SLA).md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.5. Service-level Agreements (SLA).md
@@ -13,7 +13,7 @@
      - 📝 Monthly Uptime % = `(Maximum Available Minutes-Downtime) / Maximum Available Minutes X 100`
      - 📝 Range from 99.9% ("three nines") to 99.999% ("five nines") for any paid tier service.
        - In other words minimum SLA for all non-free Azure services are 99.9%
-     - E.g. Azure Cosmos DB (Database) service SLA offers 99.999 percent uptime
+     - E.g. [Azure Cosmos DB](./3.2.1.%20Databases.md#azure-cosmos-db) (Database) service SLA offers 99.999 percent uptime
        - meaning it allows for about 5 minutes of total downtime per year.
        - also includes low-latency commitments of less than 10 milliseconds on DB read + write operations.
   3. 📝 **Service credits**
