--- a/AZ-900 Microsoft Azure Fundamentals/3.1. Compute.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1. Compute.md
@@ -1,5 +1,6 @@
 # Compute
 
+- Primarily for  performing calculations, executing logic and running applications
 - On-demand & computing service for running cloud-based applications
 - Provides computing resources like multi-core processors and supercomputers via virtual machines and containers.
 - Provides serverless computing to run apps without requiring infrastructure setup or configuration.
