--- a/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
@@ -82,19 +82,26 @@
 - Communicate with each other using APIs
   - Internal functionality is encapsulated
   - You'd want to reduce interdependencies and introduce orchestration / management layer in the higher level consuming application to coordinate calls & combines results
-- **Deployment**
-  - Allows each microservice to be deployed independently of every other microservice.
-  - A team can update an existing service without rebuilding/redeploying the entire application.
-  - They can easily roll back & roll forward & update if something goes wrong.
-  - Makes bug fixes + feature releases more manageable & less risky
-  - Allows each microservice
-    - to be scaled independently
-    - persist own data & external state without common repository layer
-  - E.g. one for front-end, one for back-end and one for storage.
-    - If back-end reaches capacity but not others, you can scale it individually.
-    - Allows you replace storage microservice without affecting rest of the application.
 - 💡 Good for:
   - High release velocity
   - Highly scalable applications
   - Applications with rich domains / subdomains
   - Organizations with small development teams
+
+### Micro-services deployment
+
+- Allows each microservice to be deployed independently of every other microservice.
+- A team can update an existing service without rebuilding/redeploying the entire application.
+- They can easily roll back & roll forward & update if something goes wrong.
+- Makes bug fixes + feature releases more manageable & less risky
+- Allows each microservice
+  - to be scaled independently
+  - persist own data & external state without common repository layer
+- E.g. one for front-end, one for back-end and one for storage.
+  - If back-end reaches capacity but not others, you can scale it individually.
+  - Allows you replace storage microservice without affecting rest of the application.
+
+### Azure Service Fabric
+
+- Distributed systems platform
+- Runs in Azure or on-premises
