--- a/AZ-900 Microsoft Azure Fundamentals/3.3. Networking.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.3. Networking.md
@@ -1,5 +1,9 @@
 # Networking
 
+- Helps you optimize application performance & scalability
+- Links compute resources and provides access to applications
+- Configure & control traffic into and out of Azure efficiently e.g. from on-premises to Azure and vice versa.
+
 ## Loosely Coupled Architecture
 
 - Architecture behind Azure
@@ -35,14 +39,14 @@
 - One or more Azure data centers within a specific geographic location
 - E.g. East US, West US, and North Europe
 
-### Virtual Network
+### Azure Virtual Network
 
 - Enable you to group and isolate related systems
 - Logically isolated network on Azure
-- Allows Azure resources to securely communicate with each other, the internet, and on-premises networks
+- Allows Azure resources to securely communicate with • each other • VPNS • the internet • on-premises networks
 - ❗ Scoped to a single region
 - 💡📝 Virtual networks, subnets, NICs (network interfaces) are free (no $$) resources
-  - Public IP addresses, reserved IP, network appliances such as VPN Gateway & Application Gateway are charged.
+  - Public IP addresses, reserved IP, network appliances such as [VPN Gateway](#vpn-gateway) & [Application Gateway](./3.3.1.%20Load%20Balancing.md#azure-application-gateway) are charged.
 - You choose which networks your virtual network can reach, whether that's the public internet or other networks in the private IP address space.
 
 #### Subnet
@@ -70,3 +74,13 @@
   - Port 22 enables you to connect directly to Linux systems over SSH.
     - You might configure VPN access to your virtual network to increase security.
 - 💡 Configure a NSG to accept traffic only from known sources, such as IP addresses that you trust.
+
+## Other services
+
+- **Azure ExpressRoute**
+  - Connects to Azure over high-bandwidth dedicated secure connections
+- **Azure Network Watcher**
+  - Monitors and diagnoses network issues using scenario-based analysis
+- **Azure Virtual WAN**
+  - Creates a unified wide area network (WAN), connecting local and remote sites
+- Network protection services: • [Azure DDoS Protection](4.6.%20Network%20Protection.md#azure-ddos-protection) • [Azure Firewall](4.6.%20Network%20Protection.md#azure-firewall)
