--- a/AZ-900 Microsoft Azure Fundamentals/3.3.1. Load Balancing.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.3.1. Load Balancing.md
@@ -13,7 +13,7 @@
 - ![3 load balancer](./img/3-load-balancer.png)
   - If a VM is unavailable or stops responding, the load balancer stops sending traffic to it.
 - In 3-tier architecture, the app and data tiers can also have a load balancer. It all depends on what your service requires.
-- You can configure your own load balancer on a VM, or use [Azure Load Balancer](#azure-load-balancer), [Azure Application Gateway](#azure-application-gateway), [Content Delivery Network](#content-delivery-network) or [Azure Traffic Manager](#azure-traffic-manager).
+- You can configure your own load balancer on a VM, or use [Azure Load Balancer](#azure-load-balancer), [Azure Application Gateway](#azure-application-gateway), [Content Delivery Network](#azure-content-delivery-network) or [Azure Traffic Manager](#azure-traffic-manager).
 
 ## Azure Load Balancer
 
@@ -46,11 +46,11 @@
     - Supports a sophisticated firewall (WAF) with detailed monitoring and logging to detect malicious attacks against your network infrastructure.
   - **URL rule-based routes**
     - Route traffic based on URL patterns, source IP address and port to destination IP address and port.
-    - Helpful when setting up a [content delivery network](#content-delivery-network).
+    - Helpful when setting up a [content delivery network](#azure-content-delivery-network).
   - **Rewrite HTTP headers**
     - Addadd or remove information from the inbound and outbound HTTP headers of each request to enable important security scenarios, or scrub sensitive information such as server names.
 
-## Content Delivery Network
+## Azure Content Delivery Network
 
 - Caches content at nodes across the world and provide better performance to end users.
 - Allows distributed network of servers that can efficiently deliver web content to users to minimize latency.
@@ -64,8 +64,12 @@
 
 - DNS, or Domain Name System, is a way to map user-friendly names to their IP addresses.
   - E.g. contoso.com might map to IP address of the load balancer at the web tier, `40.65.106.192`.
-- You can bring your own DNS server or use **Azure DNS**
-  - A hosting service for DNS domains that runs on Azure infrastructure.
+- You can bring your own DNS server or use [Azure DNS](#azure-dns)
+
+#### Azure DNS
+
+- A hosting service for DNS domains that runs on Azure infrastructure.
+- Provides ultra-fast DNS responses and ultra-high domain availability
 
 ## Azure Traffic Manager
 
