--- a/AZ-900 Microsoft Azure Fundamentals/4.4. Identity and Access (Azure AD).md
+++ b/AZ-900 Microsoft Azure Fundamentals/4.4. Identity and Access (Azure AD).md
@@ -50,7 +50,7 @@
   - = more passwords & harder for users to remember them
   - = more risk of credential-related security incident
   - = harder management: more account lockouts and password reset requests
-    - if a user leaves an organization = all identities must be tracked down.s
+    - if a user leaves an organization = all identities must be tracked dow
 - Single sign-on (SSO) = single identity
   - = one password to access across all applications
   - 📝 less effort to manage e.g. if someone leaves an organization
@@ -128,10 +128,11 @@
 
 - Called also **Azure roles**.
 - 📝 Provides fine-grained access management for Azure resources
-- **Role**: Sets of permissions
+- **Role**
+  - Sets of permissions
   - E.g. "Read-only" or "Contributor"
-- Identities are mapped to roles directly or through group membership.
-- **lL**
+  - Identities are mapped to roles directly or through group membership.
+- **Role assignments**
   - When you are assigned to a role, RBAC allows you to perform specific actions, such as read, write, or delete.
   - E.g.
     - Allow one user to manage VMs in a subscription
