--- a/AZ-900 Microsoft Azure Fundamentals/4.6. Network Protection.md
+++ b/AZ-900 Microsoft Azure Fundamentals/4.6. Network Protection.md
@@ -27,7 +27,7 @@
 #### Azure Firewall
 
 - Managed, highly available & scalable, network-level, firewall as a service
-- Inbound protection for non-HTTP/S protocols.
+- Inbound protection for mainly non-HTTP/S protocols.
   - E.g. Remote Desktop Protocol (RDP), Secure Shell (SSH), and File Transfer Protocol (FTP).
 - Outbound protection for all ports and protocols
   - Also application-level protection for outbound HTTP/S.
