--- a/AZ-900 Microsoft Azure Fundamentals/3.1.3. App Service.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1.3. App Service.md
@@ -2,9 +2,18 @@
 
 - Azure App Service is an HTTP-based service.
 - Enables you to build and host many types of web-based solutions without managing infrastructure.
-- E.g. you can host web apps, mobile back ends, and RESTful APIs in several supported programming languages.
+- E.g. you can host web apps, [mobile back-ends](#mobile-apps), and RESTful APIs in several supported programming languages.
 - Supports different frameworks such as .NET, .NET Core, Java, Ruby, Node.js, PHP, Python..
 - Can scale on both both Windows and Linux-based environments.
+
+## Mobile apps
+
+- Allows developers to create mobile backend as a service (MBaaS)
+- Features include
+  - Autoscaling
+  - Offline data synchronization
+  - Broadcasting push notifications
+  - Integration with identity providers including Azure Active Directory, Google, Twitter, Facebook, and Microsoft
 
 ## Azure Marketplace
 
