--- a/AZ-900 Microsoft Azure Fundamentals/3.2. Storage.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.2. Storage.md
@@ -30,7 +30,7 @@
   - All of the data follows the same format.
   - E.g. sensor data or financial data.
 
-## Semi-structured data
+### Semi-structured data
 
 - Also called as **non-relational** or **NoSQL data**.
 - Doesn't fit neatly into tables, rows, and columns.
@@ -43,37 +43,21 @@
   - e.g. PDF document, a JPG image, a JSON file, video content, etc
 - 💡More prominent as businesses try to tap into new data sources.
 
-## Azure storage types
+## Azure Storage
 
-### Azure SQL Database
+- Includes disks attached to virtual machines, file shares, databases
+- They can expand & shrink necessarily
+- Common characteristics:
+  - **Durable** and highly available with redundancy and replication.
+  - **Secure** through automatic encryption and role-based access control.
+  - **Scalable** with virtually unlimited storage.
+  - **Managed**, handling maintenance and any critical problems for you.
+  - **Accessible** from anywhere in the world over HTTP or HTTPS.
 
-- Relational database as a service (DaaS)
-- Based on the latest stable version of the Microsoft SQL Server database engine.
-- High-performance, reliable, fully managed and secure database
-- Migrate your existing SQL Server databases with minimal downtime using the **Azure Database Migration Service**
-  - Uses the **Microsoft Data Migration Assistant**
-    - Generate assessment reports that provide recommendations
-  - Performs all of the required steps. You just change the connection string in your apps.
-
-### SQL Data Warehouse
-
-- 📝 A cloud data warehouse for the enterprise
-- Characterized by high resiliency through automatic scaling.
-
-### Azure Cosmos DB
-
-- 📝 Globally distributed (= multiple regions) database service
-- Supports schema-less data, stores JSON  
-- 💡 Good for **Always On** applications to support constantly changing data.
-  - Helps with failover during regional disaster
-  - [Transparent multi-master replication](https://docs.microsoft.com/en-us/azure/cosmos-db/global-dist-under-the-hood), [99.999% high availability](https://docs.microsoft.com/en-us/azure/cosmos-db/high-availability) for both reads and writes
-- 💡 Good for data used by & maintained by users around the globe.
-
-### Azure Storage
-
-#### Azure Blob Storage
+### Azure Blob Storage
 
 - Also known as **Azure blobs**
+- Good for very large objects, such as video files or bitmaps
 - Unstructured, meaning that there are no restrictions on the kinds of data it can hold.
 - Can manage thousands of simultaneous uploads, massive amounts of video data, constantly growing log files, and can be reached from anywhere with an internet connection.
 - Lets you
@@ -82,13 +66,13 @@
 - 💡 Also used to store data for backup, disaster recovery, and archiving.
 - 📝 Ability to store up to 8 TB of data for virtual machines (VM disks)
 
-##### Storage tiers
+#### Storage tiers
 
 1. **Hot storage tier**: optimized for storing data that is accessed frequently.
 2. **Cool storage tier**: optimized for data that are infrequently accessed and stored for at least 30 days.
 3. **Archive storage tier**: for data that are rarely accessed and stored for at least 180 days with flexible latency requirements.
 
-#### Azure Disk Storage
+### Azure Disk Storage
 
 - Also known as **Azure disks**
 - Provides disks for virtual machines, applications, and other services to access and use as they need.
@@ -104,25 +88,26 @@
   - Premium SSD disks for mission-critical production applications.
 - Durable: ZERO% annualized failure rate.
 
-#### Azure Data Lake Storage
+### Azure Data Lake Storage
 
 - 📝 Allows you to perform analytics on your data usage and prepare reports.
 - Stores both structured and unstructured data.
 - Combines the scalability and cost benefits of object storage with the reliability and performance of the Big Data file system capabilities.
 - Supports batch queries, interactive queries, real-time analytics, machine learning, and being a data warehouse.
 
-#### Azure File Storage
+### Azure File Storage
 
 - Also known as **Azure files**
+- File shares that you can access and manage like a file server
 - Fully managed file shares in the cloud that are accessible via the industry standard Server Message Block (SMB) protocol.
 - Ensures the data is encrypted at rest and in transit.
 - Can be mounted concurrently by cloud or on-premises Windows, Linux, and macOS.
 - 📝 Any number of Azure virtual machines or roles can mount and access the file storage share simultaneously.
 - 💡 Good to share files anywhere in the world, diagnostic data, or application data sharing.
 
-#### Azure Queue Storage
+### Azure Queue Storage
 
-- Service for storing large numbers of messages that can be accessed from anywhere in the world.
+- A data store for queuing and reliably delivering messages between applications
 - 💡 Helps build flexible applications and separate functions for better durability across large workloads
   - When application components are decoupled, they can scale independently
   - Provides asynchronous message queueing for communication between application components
@@ -134,31 +119,37 @@
   - Distribute load among different web servers/infrastructure and to manage bursts of traffic.
   - Build resilience against component failure when multiple users access your data at the same time.
 
-#### Encryption Types
+### Azure Table Storage
 
-##### Azure Storage Service Encryption (SSE)
+- NoSQL data Store
+- Scheme-less design
+
+### Encryption Types
+
+#### Azure Storage Service Encryption (SSE)
 
 - For data at rest helps you secure your data.
 - It encrypts the data before storing it and decrypts the data before returning it.
 - Encryption & decryption are transparent to the user.
 
-##### Client-side encryption
+#### Client-side encryption
 
 - Data is already encrypted by the client libraries.
 - Azure stores the data in the encrypted state at rest, which is then decrypted during retrieval.
 
-#### Replication
+### Replication
 
 - Set up when you create a storage account
 - Ensures that your data is durable and always available
 - Provides regional and geographic replications
   - Protects data against natural disasters and other local disasters like fire or flooding.
 
-#### On-premises storage vs Azure data storage
+### On-premises storage vs Azure data storage
 
-##### Why migrate to cloud
+#### Why migrate to cloud
 
-- **Cost effectiveness**: Pay-as-you go
+- **Cost effectiveness**
+  - Pay-as-you go
   - No dedicated hardware to be purchased, installed, configured and maintained. = no up-front expense (or capital cost).
   - Scalable: No need to have idle hardware
 - **Reliability**
@@ -170,7 +161,7 @@
   - Requirements and technologies change: No need to reprovisioning & deployment of new infrastructure.
   - Create new services in minutes = change storage back-ends quickly without needing a significant hardware investment.
 
-##### Comparison
+#### Comparison
 
 | Needs | On-premises | Azure data storage |
 | ----- | ----------- | ------------------ |
@@ -179,6 +170,6 @@
 | **Replication and high availability** | More resources, licensing, and servers required | Built-in replication and redundancy features available |
 | **Application sharing and access to shared resources** | File sharing requires additional administration resources | File sharing options available without additional license |
 | **Relational data storage** | Needs a database server with database admin role | Offers database-as-a-service options |
-| **Distributed storage and data access** | Expensive storage, networking, and compute resources needed | Azure Cosmos DB provides distributed access |
+| **Distributed storage and data access** | Expensive storage, networking, and compute resources needed | [Azure Cosmos DB](./3.2.1.%20Databases.md#azure-cosmos-db) provides distributed access |
 | **Messaging and load balancing** | Hardware redundancy impacts budget and resources | Azure Queue provides effective load balancing |
 | **Tiered storage** | Management of tiered storage needs technology and labor skill set | Azure offers automated tiered storage of data |
