move short description of authorization/authentication

--- a/AZ-303 Microsoft Azure Architect Technologies/3.5.1. Authentication.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/3.5.1. Authentication.md
@@ -1,5 +1,8 @@
 # Authentication
 
+- Act of verifying someone's identity.
+- Who are you?
+
 ## Certificate-based authentication
 
 - Client establish its identity to a server by using a digital certificate.
