--- a/AZ-303 Microsoft Azure Architect Technologies/3.5.2. Authorization.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/3.5.2. Authorization.md
@@ -1,5 +1,7 @@
 # Authorization
 
+- Act of verifying if someone has access to a certain operation/subsystem.
+- What can you do?
 - Authorization in past
   - Protocols like LDAP or tools like AD DS.
   - Application queried database whenever a user attempted to access an application.
