mention decommissioning of AzSk and add AzTS

--- a/AZ-400 Microsoft Azure DevOps Solutions/8. DevSecOps.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/8. DevSecOps.md
@@ -67,14 +67,31 @@
 ### Penetration testing tools
 
 - See also [penetration testing](#penetration-testing)
-- **[OWASP ZAP](https://owasp.org/www-project-zap/)** – penetration testing
-  - 💡 passive tests with CI and active tests with nightly build
-  - Better to use the [OWASP Zap/Weekly](https://hub.docker.com/r/owasp/zap2docker-weekly/) docker container within Azure Container Services to get latest updates.
-- **[Azure DevOps Security Kit (AzSk)](https://azsk.azurewebsites.net/)**
-  - PowerShell cmdlets and guidance for security best practices
-  - Scans your Azure resources (run PowerShell command) and provide CSV file with the scan result and recommendations as fix script.
-  - You can run the recommendation fix with command to automatically fix issues
-  - With Azure DevOps Security Kit (AzSk) (VSTS extension), you can scan whitelisted/blacklisted ports.
+
+#### OWASP ZAP
+
+- Full name: [OWASP Zed Attack Proxy (ZAP)](https://www.zaproxy.org/)
+- Passive tests with CI and active tests with nightly build
+- 💡 Better to use the [OWASP Zap/Weekly](https://hub.docker.com/r/owasp/zap2docker-weekly/) docker container within Azure Container Services to get latest updates.
+
+#### Secure DevOps Kit for Azure (AzSK)
+
+- ❗️ It's [replaced](https://github.com/azsk/DevOpsKit-docs/blob/3cd058045f629baa3ff40c121a63d062134fb6fc/ReleaseNotes/AzSKSunsetNotice.md) by [AzTS](#azure-tenant-security-solution-azts) as of 2021.
+- PowerShell cmdlets and guidance for security best practices
+- Scans Azure resources (run PowerShell command) and provide CSV file with the scan result and recommendations as fix script.
+- Allows running the recommendation fix with command to automatically fix issues
+- On Azure DevOps you can use [Secure DevOps Kit (AzSK) CICD Extensions for Azure](https://marketplace.visualstudio.com/items?itemName=azsdktm.AzSDK-task)
+- Allows for scanning whitelisted/blacklisted ports.
+- 👀 [Official page](https://azsk.azurewebsites.net/)
+
+#### Azure Tenant Security Solution (AzTS)
+
+- Cloud security and compliance solution using native security capabilities in Azure
+- Scans Azure subscriptions and resource configurations across multiple subscriptions
+- Next level [AzSK](#secure-devops-kit-for-azure-azsk), similar to AzSK Continuous Assurance (CA) in central-scan mode.
+- Integrates with Azure/Azure Security Center policies
+- Requires installation on Azure with a management identity with reader permissions
+- Stores results in Log Analytics Workspace that can be sent to Power BI
 
 ### Secret management
 
